<resources>
    <string name="app_name">OpenFoodFacts</string>
    <string name="brand">Brand</string>
    <string name="quantity">Quantity</string>
    <string name="barcode">Bar code</string>
    <string name="sold">Sold in</string>
    <string name="ingredients">Ingredients</string>
    <string name="allergenes">Allergen</string>
    <string name="additives">Additives</string>
    <string name="energy">Energy</string>
    <string name="fat">Fat</string>
    <string name="acid">Acid</string>
    <string name="glucid">Glucid</string>
    <string name="sugar">Sugar</string>
    <string name="fiber">Fibers</string>
    <string name="salt">Salt</string>
    <string name="sodium">Sodium</string>
    <string name="i00g">Per 100g</string>
    <string name="part">Per part</string>
    <string name="protein">Protein</string>

    <string name="level_low">Low quantity</string>
    <string name="level_moderate">Moderate quantity</string>
    <string name="level_high">High quantity</string>
</resources>